# obsc_detec_euc

./: CMakeLists.txt  README.md  package.xml
launch/: obsc_detec.launch
rviz/: obsc.rviz
src/: obj_detection.cpp
